# hacks

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/commands/: csv2md.rs  ip.rs  mod.rs  msgpack.rs  uuid.rs
