[package]
name = "hacks"
version = "0.1.0"
edition = "2021"
description = "CLI full of hacks that make my life easier"
license = "MIT"
authors = ["Rob Herley <me@reb.gg>"]

[[bin]]
name = "hacks"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1.6", features = ["v1", "v4", "v7", "serde"] }
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
base64 = "0.21"
if-addrs = "0.10"
anyhow = "1.0"
